# CodeSentinel

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  trigger_clean_review.py  trigger_review.py
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/dependencies/: services.py
backend/app/core/: config.py  logging.py
backend/app/domain/: __init__.py  events.py  models.py  ports.py
backend/app/infrastructure/: database.py  git_service.py  github_notifier.py  heartbeat.py  openai_code_reviewer.py  openai_doc_analyzer.py  openai_explainer.py  openai_test_analyzer.py  postgres_repository.py  rabbitmq.py  redis.py  schema.sql  slack_notifier.py
backend/app/schemas/: auth.py  health.py  repositories.py  reviews.py  webhooks.py
backend/app/services/: code_review_agent_service.py  deployment_agent_service.py  documentation_agent_service.py  health_service.py  planner_service.py  review_coordinator.py  security_agent_service.py  testing_agent_service.py  webhook_service.py
backend/app/workers/: code_review_worker.py  deployment_worker.py  documentation_worker.py  planner_worker.py  security_worker.py  testing_worker.py
backend/tests/unit/: test_auth.py  test_code_review_agent.py  test_deployment_agent.py  test_documentation_agent.py  test_health.py  test_notifier_coordinator.py  test_planner_service.py  test_postgres_repository.py  test_repositories.py  test_repository_settings.py  test_reviews_endpoint.py  test_security_agent.py  test_testing_agent.py  test_webhook_service.py
(+26 files in other folders)
