[project]
name = "codesentinel-api"
version = "0.1.0"
description = "FastAPI backend for CodeSentinel"
requires-python = ">=3.11"
dependencies = [
    "aio-pika>=9.4.3",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "pydantic-settings>=2.4.0",
    "openai>=1.0.0",
    "redis>=5.0.8",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.6",
    "httpx>=0.27.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.4",
]

[build-system]
requires = ["setuptools>=70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
